--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ PyYAML==5.4.1
 QtPy==1.9.0
 scikit-learn==0.24.2
 scipy==1.7.1
-sip==4.19.13
+sip>=4.19.13
 sklearn==0.0
 text-unidecode==1.3
 threadpoolctl==2.2.0
